--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,194 @@
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap");
+
+:root {
+	/* ### Theme 0 */
+	/* #### Backgrounds */
+	--main-background: hsl(222, 26%, 31%);
+	--keypad-background: hsl(223, 31%, 20%);
+	--screen-background: hsl(224, 36%, 15%);
+	/* #### Keys */
+	--key-backgroundPri: hsl(225, 21%, 49%);
+	--key-shadowPri: hsl(224, 28%, 35%);
+	--key-background-and-toggle: hsl(6, 63%, 50%);
+	--key-shadowSec: hsl(6, 70%, 34%);
+	--key-backgroundSec: hsl(30, 25%, 89%);
+	--key-shadowEtc: hsl(28, 16%, 65%);
+	/* #### Text */
+	--textPri: hsl(221, 14%, 31%);
+	--textSec: hsl(0, 0%, 100%);
+	--text-body: hsl(0, 0%, 100%);
+}
+
+.theme1 {
+	/* ### Theme 1 */
+	/* #### Backgrounds */
+	--main-background: hsl(0, 0%, 90%);
+	--keypad-background: hsl(0, 5%, 81%);
+	--screen-background: hsl(0, 0%, 93%);
+	/* #### Keys */
+	--key-backgroundPri: hsl(185, 42%, 37%);
+	--key-shadowPri: hsl(185, 58%, 25%);
+	--key-background-and-toggle: hsl(25, 98%, 40%);
+	--key-shadowSec: hsl(25, 99%, 27%);
+	--key-backgroundSec: hsl(45, 7%, 89%);
+	--key-shadowEtc: hsl(35, 11%, 61%);
+	/* #### Text */
+	--textPri: hsl(60, 10%, 19%);
+	--textSec: hsl(0, 0%, 100%);
+	--text-body: hsl(60, 10%, 19%);
+}
+
+.theme2 {
+	/* ### Theme 2 */
+	/* #### Backgrounds */
+	--main-background: hsl(268, 75%, 9%);
+	--keypad-background: hsl(268, 71%, 12%);
+	--screen-background: hsl(268, 71%, 12%);
+	/* #### Keys */
+	--key-backgroundPri: hsl(281, 89%, 26%);
+	--key-shadowPri: hsl(285, 91%, 52%);
+	--key-background-and-toggle: hsl(176, 100%, 44%);
+	--key-shadowSec: hsl(177, 92%, 70%);
+	--key-backgroundSec: hsl(268, 47%, 21%);
+	--key-shadowEtc: hsl(290, 70%, 36%);
+	/* #### Text */
+	--textPri: hsl(52, 100%, 62%);
+	--textSec: hsl(198, 20%, 13%);
+	--text-body: hsl(52, 100%, 62%);
+}
+
+* {
+	box-sizing: border-box;
+	font-family: "Spartan", sans-serif;
+	font-weight: 700;
+	transition: all 0.1s ease-in-out;
+	font-size: 32px;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#root {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background-color: var(--main-background);
+	color: var(--text-body);
+}
+
 .App {
-  text-align: center;
+	max-width: min(90%, 426px);
+	width: 100%;
+	display: flex;
+	flex-flow: column;
+	grid-gap: 0.7rem;
+	overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.output {
+	position: relative;
+	width: 100%;
+	background-color: var(--screen-background);
+	border-radius: 0.4rem;
+	height: 3rem;
+	text-align: right;
+	padding: 0.8rem 0.6rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.output > span {
+	position: absolute;
+	bottom: 0.3rem;
+	right: 0.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.keys {
+	border-radius: 0.4rem;
+	display: grid;
+	width: 100%;
+	background-color: var(--keypad-background);
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 0.5rem;
+	padding: 0.6rem;
 }
 
-.App-link {
-  color: #61dafb;
+.keys button {
+	width: 100%;
+	height: 100%;
+	display: inline-block;
+	padding: 0.2rem 0;
+	text-align: center;
+	color: var(--textPri);
+	font-size: 0.85rem;
+	border: none;
+	overflow: hidden;
+	border-radius: 0.2rem;
+	outline: none;
+	background-color: var(--key-backgroundSec);
+	border-top: 7px solid transparent;
+	border-bottom: 4px solid var(--key-shadowEtc);
+	cursor: pointer;
+	user-select: none;
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-o-user-select: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.keys button.secondary {
+	font-size: 0.65rem;
+	color: white;
+	background-color: var(--key-backgroundPri);
+	border-bottom: 4px solid var(--key-shadowPri);
+}
+
+.keys button.etc {
+	font-size: 0.65rem;
+	color: var(--textSec);
+	background-color: var(--key-background-and-toggle);
+	border-bottom: 4px solid var(--key-shadowSec);
+}
+.keys button.etc:active {
+	background-color: var(--key-backgroundPri);
+}
+
+.keys button:active {
+	background-color: var(--key-background-and-toggle);
+}
+
+.keys button:hover {
+	border-bottom-width: 0px;
+}
+
+.keys .span-2 {
+	background-color: blueviolet;
+	grid-column: span 2;
+}
+
+@media (max-width: 500px) {
+	.output span {
+		font-size: 26px;
+	}
+	.keys button {
+		padding: 0.4rem 0rem;
+	}
+}
+
+@media (max-width: 300px) {
+	#root {
+		display: none;
+	}
+	body::before {
+		content: "Please Use Bigger Screen";
+		text-align: center;
+	}
 }
